--- a/style.css
+++ b/style.css
@@ -1,51 +1,79 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
-*
-{
-    margin: 0;
-    padding:0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
 body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: #000;
+    padding-left: 42%;
+    padding-top: 14%;
+}
+.container{
+    width:200px;
+    height:200px;
+    position: relative;
 }
 .box{
-    position: relative;
-    display: flex;
-    flex-direction: column;
+    display: block;
+    width: 100.5%;
+    height: 63px;
+    border:2px solid white;
 }
-.box h2{
-    font-size: 2.25em;
-    color: transparent;
-    line-height: 1em;
-    text-transform: uppercase;
-    letter-spacing: 0.05em;
-    -webkit-text-stroke: 1px #f00;
-    animation: animate 2.5s linear infinite;
-    animation-delay: calc(var(--i) * -0.25s);
+.font .box{
+    background: #fa5252;
 }
-@keyframes animate
-{
-    0%,10%
-    {
-        color: #f00;
-        filter: hue-rotate(0deg);
-    }
-    10.0000001%
-    {
-        color:transparent;
-        
-    }
-    100%
-    {
-        color:transparent;
-        filter: hue-rotate(720deg);
-    }
-    
-
-
+.back .box{
+    background: #f76707;
 }
+.right .box{
+    background: #12b886;
+}
+.left .box{
+    background: #4c6ef5;
+}
+.top .box{
+    background: #fab005;
+}
+.bottom .box{
+    background: #7950f2;
+}
+.cube{
+    width:100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    animation: rotatecube 10s infinite;
+}
+@keyframes rotatecube{
+    0%{
+        transform: rotateX(0deg) rotateY(360deg) rotateZ(90deg);
+    }
+    25%{
+        transform: rotateX(90deg) rotateY(270deg) rotateZ(180deg);
+    }
+    50%{
+        transform: rotateX(180deg) rotateY(180deg) rotateZ(0deg);
+    }
+    75%{
+        transform: rotateX(270deg) rotateY(90deg) rotateZ(360deg);
+    }
+    100%{
+        transform: rotateX(360deg) rotateY(0deg) rotateZ(270deg);
+    }
+}
+.cube > div{
+    width: 200px;
+    height: 200px;
+    position: absolute;
+}
+.cube .font{
+transform: rotateY(0deg) translateZ(100px);
+}
+.cube .back{
+    transform: rotateX(180deg) translateZ(100px);
+    }
+    .cube .right{
+        transform: rotateY(90deg) translateZ(100px);
+        }
+        .cube .left{
+            transform: rotateY(-90deg) translateZ(100px);
+            }
+            .cube .top{
+                transform: rotateX(90deg) translateZ(100px);
+                }
+                .cube .bottom{
+                    transform: rotateX(-90deg) translateZ(100px);
+                    }
