--- a/style.css
+++ b/style.css
@@ -1,79 +1,71 @@
-body{
-    padding-left: 42%;
-    padding-top: 14%;
+*
+{
+    margin: 0;
+    padding: 0;
 }
-.container{
-    width:200px;
-    height:200px;
+section{
     position: relative;
+    height: 100vh;
+    overflow: hidden;
+    background: #111;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
 }
-.box{
-    display: block;
-    width: 100.5%;
-    height: 63px;
-    border:2px solid white;
+section i{
+position: relative;
+width: 60px;
+height: 60px;
+background: #222;
 }
-.font .box{
-    background: #fa5252;
+ section i:nth-child(5n+1){
+     animation: animate 2s linear infinite,animateBg 5s linear infinite;
+animation-delay: calc(-1s * var(--i));}
+section i:nth-child(5n+2){
+    animation: animate 3s linear infinite,animateBg 5s linear infinite;
+animation-delay: calc(-1.5s * var(--i));}
+section i:nth-child(5n+3){
+    animation: animate 4s linear infinite,animateBg 5s linear infinite;
+animation-delay: calc(-2s * var(--i));}   
+section i:nth-child(5n+4){
+    animation: animate 5s linear infinite,animateBg 5s linear infinite;
+animation-delay: calc(-2.5s * var(--i));
 }
-.back .box{
-    background: #f76707;
+section i:nth-child(5n+5){
+    animation: animate 6s linear infinite,animateBg 5s linear infinite;
+animation-delay: calc(-3.0s * var(--i));
 }
-.right .box{
-    background: #12b886;
+sectioni:nth-child(5n+6){
+    animation: animate 7s linear infinite,animateBg 5s linear infinite;
+animation-delay: calc(-3.5s * var(--i));
 }
-.left .box{
-    background: #4c6ef5;
-}
-.top .box{
-    background: #fab005;
-}
-.bottom .box{
-    background: #7950f2;
-}
-.cube{
-    width:100%;
-    height: 100%;
-    transform-style: preserve-3d;
-    animation: rotatecube 10s infinite;
-}
-@keyframes rotatecube{
-    0%{
-        transform: rotateX(0deg) rotateY(360deg) rotateZ(90deg);
+
+
+@keyframes animate
+{
+    0%,20%
+    {
+        background: #222;
     }
-    25%{
-        transform: rotateX(90deg) rotateY(270deg) rotateZ(180deg);
+    60%
+    {
+        background: #0f0;
     }
-    50%{
-        transform: rotateX(180deg) rotateY(180deg) rotateZ(0deg);
-    }
-    75%{
-        transform: rotateX(270deg) rotateY(90deg) rotateZ(360deg);
-    }
-    100%{
-        transform: rotateX(360deg) rotateY(0deg) rotateZ(270deg);
+    80%,100%
+    {
+        background: #222;
     }
 }
-.cube > div{
-    width: 200px;
-    height: 200px;
-    position: absolute;
-}
-.cube .font{
-transform: rotateY(0deg) translateZ(100px);
-}
-.cube .back{
-    transform: rotateX(180deg) translateZ(100px);
+@keyframes animateBg
+{
+    0%
+    {
+        filter: hue-rotate(0deg);
     }
-    .cube .right{
-        transform: rotateY(90deg) translateZ(100px);
-        }
-        .cube .left{
-            transform: rotateY(-90deg) translateZ(100px);
-            }
-            .cube .top{
-                transform: rotateX(90deg) translateZ(100px);
-                }
-                .cube .bottom{
-                    transform: rotateX(-90deg) translateZ(100px);
-                    }
+    100%
+    {
+        filter: hue-rotate(360deg);
+    }
+}
